--- a/pkgsinfo/apps/GitHub/GitHub-216.plist
+++ b/pkgsinfo/apps/GitHub/GitHub-216.plist
@@ -7,7 +7,7 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-10-30T15:07:11Z</date>
+		<date>2015-11-12T17:07:52Z</date>
 		<key>munki_version</key>
 		<string>2.3.1.2535</string>
 		<key>os_version</key>
@@ -21,34 +21,36 @@
 		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Communication</string>
+	<string>Programming</string>
 	<key>description</key>
-	<string>Calling, seeing, messaging and sharing with others – wherever they are.</string>
+	<string>GUI application for GitHub.com</string>
 	<key>developer</key>
-	<string>Microsoft</string>
+	<string>GitHub</string>
 	<key>display_name</key>
-	<string>Skype</string>
+	<string>GitHub</string>
 	<key>installer_item_hash</key>
-	<string>cf7913f434878ef84683a8b1f7b8afa74d09e19e6acba3e527429e5e236031f1</string>
+	<string>7f2b1c3103735e4fce6086070844d06adbd7f2b674abd106e027926ed443dbc9</string>
 	<key>installer_item_location</key>
-	<string>apps/Skype-7.15.0.333.dmg</string>
+	<string>apps/GitHub/GitHub-216.dmg</string>
 	<key>installer_item_size</key>
-	<integer>40061</integer>
+	<integer>39418</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.skype.skype</string>
+			<string>com.github.GitHub</string>
+			<key>CFBundleName</key>
+			<string>GitHub Desktop</string>
 			<key>CFBundleShortVersionString</key>
-			<string>7.15</string>
+			<string>Das Ship Machine</string>
 			<key>CFBundleVersion</key>
-			<string>7.15.0.333</string>
+			<string>216</string>
 			<key>minosversion</key>
 			<string>10.9</string>
 			<key>path</key>
-			<string>/Applications/Skype.app</string>
+			<string>/Applications/GitHub Desktop.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
@@ -61,20 +63,39 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>Skype.app</string>
+			<string>GitHub Desktop.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
 	<string>10.9</string>
 	<key>name</key>
-	<string>Skype</string>
+	<string>GitHub</string>
+	<key>postinstall_script</key>
+	<string>#!/bin/sh
+CLI_SOURCE="/Applications/GitHub.app/Contents/MacOS/github_cli"
+DEST_DIR="/usr/local/bin"
+if [ ! -x "${CLI_SOURCE}" ]; then
+    exit 1
+fi
+
+if [ ! -d "${DEST_DIR}" ]; then
+    /bin/mkdir -p "${DEST_DIR}"
+fi
+
+/bin/cp -f "${CLI_SOURCE}" "${DEST_DIR}/github"
+</string>
 	<key>unattended_install</key>
 	<true/>
 	<key>uninstall_method</key>
-	<string>remove_copied_items</string>
+	<string>uninstall_script</string>
+	<key>uninstall_script</key>
+	<string>#!/bin/sh
+/bin/rm -rf /Applications/GitHub.app
+/bin/rm -f /usr/local/bin/github
+</string>
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>7.15.0.333</string>
+	<string>216</string>
 </dict>
 </plist>
