--- a/pkgsinfo/apps/OpenOffice/OpenOffice-4.1.2.plist
+++ b/pkgsinfo/apps/OpenOffice/OpenOffice-4.1.2.plist
@@ -7,7 +7,7 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-10-30T15:07:11Z</date>
+		<date>2015-11-05T16:59:29Z</date>
 		<key>munki_version</key>
 		<string>2.3.1.2535</string>
 		<key>os_version</key>
@@ -21,38 +21,38 @@
 		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Communication</string>
+	<string>Office</string>
 	<key>description</key>
-	<string>Calling, seeing, messaging and sharing with others – wherever they are.</string>
+	<string>Apache OpenOffice is the leading open-source office software suite for word processing, spreadsheets, presentations, graphics, databases and more. It is available in many languages and works on all common computers. It stores all your data in an international open standard format and can also read and write files from other common office software packages. It can be downloaded and used completely free of charge for any purpose.</string>
 	<key>developer</key>
-	<string>Microsoft</string>
+	<string>The Apache Software Foundation</string>
 	<key>display_name</key>
-	<string>Skype</string>
+	<string>Apache OpenOffice</string>
 	<key>installer_item_hash</key>
-	<string>cf7913f434878ef84683a8b1f7b8afa74d09e19e6acba3e527429e5e236031f1</string>
+	<string>4fe8e4b30989d0476fe3afc6d9d4374af57d38bd04f4a5e1947462bf5dde7699</string>
 	<key>installer_item_location</key>
-	<string>apps/Skype-7.15.0.333.dmg</string>
+	<string>apps/OpenOffice/OpenOffice-4.1.2.dmg</string>
 	<key>installer_item_size</key>
-	<integer>40061</integer>
+	<integer>168672</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.skype.skype</string>
+			<string>org.openoffice.script</string>
+			<key>CFBundleName</key>
+			<string>OpenOffice</string>
 			<key>CFBundleShortVersionString</key>
-			<string>7.15</string>
-			<key>CFBundleVersion</key>
-			<string>7.15.0.333</string>
+			<string>4.1.2</string>
 			<key>minosversion</key>
-			<string>10.9</string>
+			<string>10.7.0</string>
 			<key>path</key>
-			<string>/Applications/Skype.app</string>
+			<string>/Applications/OpenOffice.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
-			<string>CFBundleVersion</string>
+			<string>CFBundleShortVersionString</string>
 		</dict>
 	</array>
 	<key>items_to_copy</key>
@@ -61,20 +61,22 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>Skype.app</string>
+			<string>OpenOffice.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.9</string>
+	<string>10.7.0</string>
 	<key>name</key>
-	<string>Skype</string>
+	<string>OpenOffice</string>
 	<key>unattended_install</key>
+	<true/>
+	<key>unattended_uninstall</key>
 	<true/>
 	<key>uninstall_method</key>
 	<string>remove_copied_items</string>
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>7.15.0.333</string>
+	<string>4.1.2</string>
 </dict>
 </plist>
