--- a/pkgsinfo/apps/adobe/AdobeAIR-19.0.0.241.plist
+++ b/pkgsinfo/apps/adobe/AdobeAIR-19.0.0.241.plist
@@ -7,55 +7,49 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-09-22T20:39:30Z</date>
+		<date>2015-11-12T17:02:02Z</date>
 		<key>munki_version</key>
-		<string>2.3.0.2519</string>
+		<string>2.3.1.2535</string>
 		<key>os_version</key>
-		<string>10.10.5</string>
+		<string>10.11</string>
 	</dict>
 	<key>autoremove</key>
 	<false/>
 	<key>catalogs</key>
 	<array>
-		<string>development</string>
 		<string>testing</string>
 		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Information Technology</string>
+	<string>Multimedia</string>
 	<key>description</key>
-	<string>Managed Software Center application.</string>
+	<string>The Adobe AIR runtime enables developers to package the same code into native applications and games for Windows and Mac OS desktops as well as iOS and Android devices, reaching over a billion desktop systems and mobile app stores for over 500 million devices.</string>
 	<key>developer</key>
-	<string>The Munki Team</string>
+	<string>Adobe</string>
 	<key>display_name</key>
-	<string>Managed Software Center</string>
+	<string>Adobe® Integrated Runtime</string>
 	<key>installed_size</key>
-	<integer>4282</integer>
+	<integer>122295</integer>
 	<key>installer_item_hash</key>
-	<string>d7db80470f118b03aa41d1ff58a5ee1c78a0cd31f79a113649ac5a548335c3a3</string>
+	<string>ff95eafd424cadd243b9a6aab2148b548d2232b65735c45c5c0c4fe35cda7634</string>
 	<key>installer_item_location</key>
-	<string>munkitools/munkitools_app-4.1.2531.pkg</string>
+	<string>apps/adobe/AdobeAIR-19.0.0.241.pkg</string>
 	<key>installer_item_size</key>
-	<integer>2992</integer>
+	<integer>54324</integer>
 	<key>minimum_os_version</key>
-	<string>10.6.0</string>
+	<string>10.5.0</string>
 	<key>name</key>
-	<string>munkitools</string>
+	<string>AdobeAIR</string>
 	<key>receipts</key>
 	<array>
 		<dict>
 			<key>installed_size</key>
-			<integer>4282</integer>
+			<integer>122295</integer>
 			<key>packageid</key>
-			<string>com.googlecode.munki.app</string>
+			<string>com.adobe.pkg.AIR</string>
 			<key>version</key>
-			<string>4.1.2531</string>
+			<string>19.0.0.241</string>
 		</dict>
-	</array>
-	<key>requires</key>
-	<array>
-		<string>munkitools_core</string>
-		<string>munkitools_launchd</string>
 	</array>
 	<key>unattended_install</key>
 	<true/>
@@ -64,6 +58,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>4.1.2531</string>
+	<string>19.0.0.241</string>
 </dict>
 </plist>
