--- a/pkgsinfo/internet_plugins/AdobeFlashPlayer-19.0.0.245.plist
+++ b/pkgsinfo/internet_plugins/AdobeFlashPlayer-19.0.0.245.plist
@@ -7,55 +7,51 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-09-22T20:39:30Z</date>
+		<date>2015-11-12T17:05:38Z</date>
 		<key>munki_version</key>
-		<string>2.3.0.2519</string>
+		<string>2.3.1.2535</string>
 		<key>os_version</key>
-		<string>10.10.5</string>
+		<string>10.11</string>
 	</dict>
 	<key>autoremove</key>
 	<false/>
 	<key>catalogs</key>
 	<array>
-		<string>development</string>
 		<string>testing</string>
 		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Information Technology</string>
+	<string>Multimedia</string>
 	<key>description</key>
-	<string>Managed Software Center application.</string>
+	<string>Adobe® Flash® Player is a cross-platform browser-based application runtime that delivers uncompromised viewing of expressive applications, content, and videos across screens and browsers.</string>
 	<key>developer</key>
-	<string>The Munki Team</string>
+	<string>Adobe</string>
 	<key>display_name</key>
-	<string>Managed Software Center</string>
+	<string>Adobe Flash Player</string>
 	<key>installed_size</key>
-	<integer>4282</integer>
+	<integer>17143</integer>
 	<key>installer_item_hash</key>
-	<string>d7db80470f118b03aa41d1ff58a5ee1c78a0cd31f79a113649ac5a548335c3a3</string>
+	<string>a4981259f87e1c12fe242eb26352f13f41f980dff7d3ee0bb5aeeae787f06c24</string>
 	<key>installer_item_location</key>
-	<string>munkitools/munkitools_app-4.1.2531.pkg</string>
+	<string>internet_plugins/AdobeFlashPlayer-19.0.0.245.dmg</string>
 	<key>installer_item_size</key>
-	<integer>2992</integer>
+	<integer>16368</integer>
 	<key>minimum_os_version</key>
-	<string>10.6.0</string>
+	<string>10.5.0</string>
 	<key>name</key>
-	<string>munkitools</string>
+	<string>AdobeFlashPlayer</string>
+	<key>package_path</key>
+	<string>Install Adobe Flash Player.app/Contents/Resources/Adobe Flash Player.pkg</string>
 	<key>receipts</key>
 	<array>
 		<dict>
 			<key>installed_size</key>
-			<integer>4282</integer>
+			<integer>17143</integer>
 			<key>packageid</key>
-			<string>com.googlecode.munki.app</string>
+			<string>com.adobe.pkg.FlashPlayer</string>
 			<key>version</key>
-			<string>4.1.2531</string>
+			<string>19.0.0.245</string>
 		</dict>
-	</array>
-	<key>requires</key>
-	<array>
-		<string>munkitools_core</string>
-		<string>munkitools_launchd</string>
 	</array>
 	<key>unattended_install</key>
 	<true/>
@@ -64,6 +60,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>4.1.2531</string>
+	<string>19.0.0.245</string>
 </dict>
 </plist>
