--- a/pkgsinfo/apps/1Password-5.4.2__1.plist
+++ b/pkgsinfo/apps/1Password-5.4.2__1.plist
@@ -7,50 +7,55 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-10-22T13:09:49Z</date>
+		<date>2016-01-07T14:11:48Z</date>
 		<key>munki_version</key>
-		<string>2.3.1.2535</string>
+		<string>2.4.0.2561</string>
 		<key>os_version</key>
 		<string>10.11</string>
 	</dict>
 	<key>autoremove</key>
 	<false/>
+	<key>blocking_applications</key>
+	<array>
+		<string>1Password</string>
+		<string>1Password mini</string>
+	</array>
 	<key>catalogs</key>
 	<array>
 		<string>testing</string>
 		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Development</string>
+	<string>Utilities</string>
 	<key>description</key>
-	<string>If you want to make games, what are you waiting for? With GameSalad Creator you can learn the basics and start making games in about an hour. That’s right. You can make your first game in about an hour.</string>
+	<string>1Password is a password manager that goes beyond simple password storage by integrating directly with your web browser to automatically log you into websites, enter credit card information, fill registration forms, and easily generate strong passwords.</string>
 	<key>developer</key>
-	<string>GameSalad Inc.</string>
+	<string>AgileBits Inc.</string>
 	<key>display_name</key>
-	<string>GameSalad</string>
+	<string>1Password</string>
 	<key>installer_item_hash</key>
-	<string>7dc668dd8dc0ce509f315b7f31c83cf258201b5af829ede8d65bfa425d053bd6</string>
+	<string>214be050ce8cb15f9a802e21749985053c5ad76a8b6cdf505f5936b5513bf502</string>
 	<key>installer_item_location</key>
-	<string>apps/GameSalad/GameSalad-1.23.1.dmg</string>
+	<string>apps/1Password-5.4.2__1.dmg</string>
 	<key>installer_item_size</key>
-	<integer>31597</integer>
+	<integer>40670</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.gendaigames.GameSalad</string>
+			<string>com.agilebits.onepassword4</string>
 			<key>CFBundleName</key>
-			<string>GameSalad</string>
+			<string>1Password 5</string>
 			<key>CFBundleShortVersionString</key>
-			<string>1.23.1</string>
+			<string>5.4.2</string>
 			<key>CFBundleVersion</key>
-			<string>1.23.1</string>
+			<string>552001</string>
 			<key>minosversion</key>
-			<string>10.7.0</string>
+			<string>10.10</string>
 			<key>path</key>
-			<string>/Applications/GameSalad.app</string>
+			<string>/Applications/1Password 5.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
@@ -63,20 +68,22 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>GameSalad.app</string>
+			<string>1Password 5.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.7.0</string>
+	<string>10.10</string>
 	<key>name</key>
-	<string>GameSalad</string>
+	<string>1Password</string>
 	<key>unattended_install</key>
+	<true/>
+	<key>unattended_uninstall</key>
 	<true/>
 	<key>uninstall_method</key>
 	<string>remove_copied_items</string>
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>1.23.1</string>
+	<string>5.4.2</string>
 </dict>
 </plist>
