--- a/pkgsinfo/Xcode-7.2.plist
+++ b/pkgsinfo/Xcode-7.2.plist
@@ -7,50 +7,49 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-10-22T13:09:49Z</date>
+		<date>2016-01-22T20:19:19Z</date>
 		<key>munki_version</key>
-		<string>2.3.1.2535</string>
+		<string>2.4.0.2561</string>
 		<key>os_version</key>
-		<string>10.11</string>
+		<string>10.11.2</string>
 	</dict>
 	<key>autoremove</key>
 	<false/>
 	<key>catalogs</key>
 	<array>
-		<string>testing</string>
 		<string>production</string>
 	</array>
 	<key>category</key>
 	<string>Development</string>
 	<key>description</key>
-	<string>If you want to make games, what are you waiting for? With GameSalad Creator you can learn the basics and start making games in about an hour. That’s right. You can make your first game in about an hour.</string>
+	<string>Development tools for OS X and iOS.</string>
 	<key>developer</key>
-	<string>GameSalad Inc.</string>
+	<string>Apple, Inc.</string>
 	<key>display_name</key>
-	<string>GameSalad</string>
+	<string>XCode</string>
 	<key>installer_item_hash</key>
-	<string>7dc668dd8dc0ce509f315b7f31c83cf258201b5af829ede8d65bfa425d053bd6</string>
+	<string>6f08ddabfb159143e9857de1668e5fdb04ba92b77297f7a1d50cf467be7222c8</string>
 	<key>installer_item_location</key>
-	<string>apps/GameSalad/GameSalad-1.23.1.dmg</string>
+	<string>Xcode_7.2.dmg</string>
 	<key>installer_item_size</key>
-	<integer>31597</integer>
+	<integer>4622771</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.gendaigames.GameSalad</string>
+			<string>com.apple.dt.Xcode</string>
 			<key>CFBundleName</key>
-			<string>GameSalad</string>
+			<string>Xcode</string>
 			<key>CFBundleShortVersionString</key>
-			<string>1.23.1</string>
+			<string>7.2</string>
 			<key>CFBundleVersion</key>
-			<string>1.23.1</string>
+			<string>9548</string>
 			<key>minosversion</key>
-			<string>10.7.0</string>
+			<string>10.10.5</string>
 			<key>path</key>
-			<string>/Applications/GameSalad.app</string>
+			<string>/Applications/Xcode.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
@@ -63,13 +62,13 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>GameSalad.app</string>
+			<string>Xcode.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.7.0</string>
+	<string>10.10.5</string>
 	<key>name</key>
-	<string>GameSalad</string>
+	<string>Xcode</string>
 	<key>unattended_install</key>
 	<true/>
 	<key>uninstall_method</key>
@@ -77,6 +76,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>1.23.1</string>
+	<string>7.2</string>
 </dict>
 </plist>
