--- a/pkgsinfo/apps/Skype-7.19.0.407.plist
+++ b/pkgsinfo/apps/Skype-7.19.0.407.plist
@@ -7,9 +7,9 @@
 		<key>created_by</key>
 		<string>aanklewicz</string>
 		<key>creation_date</key>
-		<date>2015-10-22T13:09:49Z</date>
+		<date>2016-01-13T13:30:29Z</date>
 		<key>munki_version</key>
-		<string>2.3.1.2535</string>
+		<string>2.4.0.2561</string>
 		<key>os_version</key>
 		<string>10.11</string>
 	</dict>
@@ -21,40 +21,40 @@
 		<string>production</string>
 	</array>
 	<key>category</key>
-	<string>Development</string>
+	<string>Communication</string>
 	<key>description</key>
-	<string>If you want to make games, what are you waiting for? With GameSalad Creator you can learn the basics and start making games in about an hour. That’s right. You can make your first game in about an hour.</string>
+	<string>Calling, seeing, messaging and sharing with others – wherever they are.</string>
 	<key>developer</key>
-	<string>GameSalad Inc.</string>
+	<string>Microsoft</string>
 	<key>display_name</key>
-	<string>GameSalad</string>
+	<string>Skype</string>
 	<key>installer_item_hash</key>
-	<string>7dc668dd8dc0ce509f315b7f31c83cf258201b5af829ede8d65bfa425d053bd6</string>
+	<string>47ab09de6a1ca4049e6cc699243e38475a8dba1f56273ef0f3ed931f183a6659</string>
 	<key>installer_item_location</key>
-	<string>apps/GameSalad/GameSalad-1.23.1.dmg</string>
+	<string>apps/Skype-7.19.0.407.dmg</string>
 	<key>installer_item_size</key>
-	<integer>31597</integer>
+	<integer>41251</integer>
 	<key>installer_type</key>
 	<string>copy_from_dmg</string>
 	<key>installs</key>
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.gendaigames.GameSalad</string>
+			<string>com.skype.skype</string>
 			<key>CFBundleName</key>
-			<string>GameSalad</string>
+			<string>Skype</string>
 			<key>CFBundleShortVersionString</key>
-			<string>1.23.1</string>
+			<string>7.19</string>
 			<key>CFBundleVersion</key>
-			<string>1.23.1</string>
+			<string>7.19.0.407</string>
 			<key>minosversion</key>
-			<string>10.7.0</string>
+			<string>10.9</string>
 			<key>path</key>
-			<string>/Applications/GameSalad.app</string>
+			<string>/Applications/Skype.app</string>
 			<key>type</key>
 			<string>application</string>
 			<key>version_comparison_key</key>
-			<string>CFBundleShortVersionString</string>
+			<string>CFBundleVersion</string>
 		</dict>
 	</array>
 	<key>items_to_copy</key>
@@ -63,13 +63,13 @@
 			<key>destination_path</key>
 			<string>/Applications</string>
 			<key>source_item</key>
-			<string>GameSalad.app</string>
+			<string>Skype.app</string>
 		</dict>
 	</array>
 	<key>minimum_os_version</key>
-	<string>10.7.0</string>
+	<string>10.9</string>
 	<key>name</key>
-	<string>GameSalad</string>
+	<string>Skype</string>
 	<key>unattended_install</key>
 	<true/>
 	<key>uninstall_method</key>
@@ -77,6 +77,6 @@
 	<key>uninstallable</key>
 	<true/>
 	<key>version</key>
-	<string>1.23.1</string>
+	<string>7.19.0.407</string>
 </dict>
 </plist>
